--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.1",
     "sass": "^1.85.1"
   },
