--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/react-big-calendar": "^1.16.1",
+    "axios": "^1.9.0",
     "exceljs": "^4.4.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
